--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <title> Fares Manai </title>
-        <link rel="icon" href="/static/images/logo.ico" type="image/x-icon">
+        <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link rel="stylesheet" href="/static/css/style.css" />
     </head>
