--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -2,19 +2,19 @@
 <section class="home-container">
   <div class="home-text">
     <p class="intro">Hello, my name is</p>
-    <p class="name">Fares Manai.</p>
-    <p class="subtitle">I'm a CS student.</p>
-    <p class="desc">Currently studying at ISAMM. I enjoy mathematics and problem solving. This portfolio is my first web project. Looking to become a well-rounded software engineer.</p>
+    <p class="name">{{ .Name }} {{ .Surname }}.</p>
+    <p class="subtitle">{{ .Subtitle }}</p>
+    <p class="desc">{{ .Description }}</p>
   </div>
 
   <div class="home-image">
-    <img src="/static/images/pfp.jpg" alt="Fares Manai" class="profile-pic" />
+    <img src="/static/images/pfp.jpg" alt="{{ .Name }} {{ .Surname }}" class="profile-pic" />
   </div>
 
   <div class="social-icons">
-    <a href="https://github.com/Kefrov" target="_blank" class="social-btn"><i class="fab fa-github"></i></a>
-    <a href="https://linkedin.com/in/kefrov" target="_blank" class="social-btn"><i class="fab fa-linkedin"></i></a>
-    <a href="https://instagram.com/kefrov" target="_blank" class="social-btn"><i class="fab fa-instagram"></i></a>
+    <a href="{{ .Socials.GitHub }}" target="_blank" class="social-btn"><i class="fab fa-github"></i></a>
+    <a href="{{ .Socials.LinkedIn }}" target="_blank" class="social-btn"><i class="fab fa-linkedin"></i></a>
+    <a href="{{ .Socials.Instagram }}" target="_blank" class="social-btn"><i class="fab fa-instagram"></i></a>
   </div>
 </section>
 {{ end }}
