--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -143,3 +143,58 @@ body {
   max-width: 50%;
   height: auto;
 }
+
+.projects-wrapper {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 4rem 4rem;
+}
+
+.project {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  padding-bottom: 4rem;
+  flex-wrap: wrap;
+}
+
+.project.reverse {
+  flex-direction: row-reverse;
+}
+
+.project-image {
+  width: 40%;
+  aspect-ratio: 1 / 1;
+  overflow: hidden;
+  border: 3px solid #ff9900;
+}
+
+.project-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.project-description {
+  flex: 1;
+  font-size: 1.2rem;
+  line-height: 1.6;
+  text-align: justify;
+}
+
+.project-title {
+  font-size: 1.5rem;
+  color: #ff9900;
+  margin-bottom: 1rem;
+}
+
+.project-title a {
+  text-decoration: none;
+  color: #ff9900;
+}
+
+.project-title a:hover {
+  text-decoration: underline;
+}
