--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -1,4 +1,5 @@
 {{ define "content" }}
+<h1 class="page-title">About Me</h1>
 <section class="about-section">
   <div class="about-text">
     {{ range .Paragraphs }}
